# StereoVision

./: .gitignore  CMakeLists.txt  FindPylon.cmake  README.md  vsbuild
Config/: default.pfs
Config/Calibration/: list_emulation.txt  pattern.txt
Config/Calibration/XMLFiles/: calibration_files.txt
Config/Camera/: default_linux_lowres.pfs  default_linux_midres.pfs
Docs/: .~lock.18-03-basler-stereovision.odt#  18-03-basler-stereovision.odt
Docs/doxygen/: Doxyfile0.1
Docs/html/: _application_8cpp.html  _application_8cpp__incl.map  _application_8cpp__incl.md5  _application_8cpp_source.html  _application_8hpp.html  _application_8hpp__dep__incl.map  _application_8hpp__dep__incl.md5  _application_8hpp__incl.map  _application_8hpp__incl.md5  _application_8hpp_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _camera_calibration_8cpp.html  _camera_calibration_8cpp__incl.map  _camera_calibration_8cpp__incl.md5  _camera_calibration_8cpp_source.html  _camera_calibration_8hpp.html  _camera_calibration_8hpp__dep__incl.map  _camera_calibration_8hpp__dep__incl.md5  _camera_calibration_8hpp__incl.map  _camera_calibration_8hpp__incl.md5  _camera_calibration_8hpp_source.html  _camera_capture_8cpp.html  _camera_capture_8cpp.js  _camera_capture_8cpp__incl.map  _camera_capture_8cpp__incl.md5  _camera_capture_8cpp_a0dcdf9c5f3116470f6dfcb64fd5e1799_icgraph.map  _camera_capture_8cpp_a0dcdf9c5f3116470f6dfcb64fd5e1799_icgraph.md5  _camera_capture_8cpp_a26b9b87dc68679ffef91a4e4f68b4bb9_cgraph.map  _camera_capture_8cpp_a26b9b87dc68679ffef91a4e4f68b4bb9_cgraph.md5  _camera_capture_8cpp_a402ec501906aa2268892e021e54dbd11_icgraph.map  _camera_capture_8cpp_a402ec501906aa2268892e021e54dbd11_icgraph.md5  _camera_capture_8cpp_source.html  _camera_capture_8hpp.html  _camera_capture_8hpp__dep__incl.map  _camera_capture_8hpp__dep__incl.md5  _camera_capture_8hpp__incl.map  _camera_capture_8hpp__incl.md5  (+142 more)
Docs/html/search/: all_61.js  all_63.js  all_65.js  all_66.js  all_68.js  all_6c.js  all_6d.js  all_6e.js  all_70.js  all_72.js  all_73.js  classes_63.js  classes_73.js  files_63.js  files_73.js  functions_63.js  functions_66.js  functions_67.js  functions_6c.js  functions_6d.js  functions_6f.js  functions_73.js  namespaces_70.js  namespaces_73.js  pages_72.js  search.js  variables_63.js  variables_66.js  variables_68.js  variables_69.js  variables_6c.js  variables_6d.js  variables_73.js  variables_77.js
Docs/latex/: _application_8cpp.tex  _application_8cpp__incl.md5  _application_8hpp.tex  _application_8hpp__dep__incl.md5  _application_8hpp__incl.md5  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _camera_calibration_8cpp.tex  _camera_calibration_8cpp__incl.md5  _camera_calibration_8hpp.tex  _camera_calibration_8hpp__dep__incl.md5  _camera_calibration_8hpp__incl.md5  _camera_capture_8cpp.tex  _camera_capture_8cpp__incl.md5  _camera_capture_8cpp_a0dcdf9c5f3116470f6dfcb64fd5e1799_icgraph.md5  _camera_capture_8cpp_a26b9b87dc68679ffef91a4e4f68b4bb9_cgraph.md5  _camera_capture_8cpp_a402ec501906aa2268892e021e54dbd11_icgraph.md5  _camera_capture_8hpp.tex  _camera_capture_8hpp__dep__incl.md5  _camera_capture_8hpp__incl.md5  _camera_configuration_8cpp.tex  _camera_configuration_8cpp__incl.md5  _camera_configuration_8hpp.tex  _camera_configuration_8hpp__dep__incl.md5  _camera_configuration_8hpp__incl.md5  _main_8cpp.tex  _main_8cpp__incl.md5  _main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  _r_e_a_d_m_e_8md.tex  _stereo_calibration_8cpp.tex  _stereo_calibration_8cpp__incl.md5  _utility_8cpp.tex  _utility_8cpp__incl.md5  _utility_8hpp.tex  _utility_8hpp__dep__incl.md5  _utility_8hpp__incl.md5  annotated.tex  class_application.tex  class_application_a68965449404743bf1add056784d6cf81_icgraph.md5  class_camera_calibration.eps  (+41 more)
Docs/man/man3/: Application.3  Application.cpp.3  Application.hpp.3  CMakeCCompilerId.c.3  CMakeCXXCompilerId.cpp.3  CameraCalibration.3  CameraCalibration.cpp.3  CameraCalibration.hpp.3  CameraCapture.3  CameraCapture.cpp.3  CameraCapture.hpp.3  CameraConfiguration.3  CameraConfiguration.cpp.3  CameraConfiguration.hpp.3  Main.cpp.3  Pylon.3  README.md.3  SV.3  SV_CalibrationPattern.3  SV_StereoPhoto.3  StereoCalibration.cpp.3  Utility.cpp.3  Utility.hpp.3  _home_gabriel_Templates_StereoVision_Bin_.3  _home_gabriel_Templates_StereoVision_Bin_CMakeFiles_.3  _home_gabriel_Templates_StereoVision_Bin_CMakeFiles_2.8.11.2_.3  _home_gabriel_Templates_StereoVision_Bin_CMakeFiles_2.8.11.2_CompilerIdCXX_.3  _home_gabriel_Templates_StereoVision_Bin_CMakeFiles_2.8.11.2_CompilerIdC_.3  _home_gabriel_Templates_StereoVision_Include_.3  _home_gabriel_Templates_StereoVision_Include_SV_.3  _home_gabriel_Templates_StereoVision_Modules_.3  _home_gabriel_Templates_StereoVision_Modules_StereoCalibration_.3  _home_gabriel_Templates_StereoVision_Source_.3  md__home_gabriel__templates__stereo_vision__r_e_a_d_m_e.3
Include/SV/: Application.hpp  Camera.hpp  CameraCalibration.hpp  CameraCapture.hpp  CameraConfiguration.hpp  Utility.hpp
Modules/StereoCalibration/: Makefile  StereoCalibration.cpp
Profiling/: callgrind.out.29511.14-04-03
Source/: Application.cpp  Camera.cpp  CameraCalibration.cpp  CameraCapture.cpp  CameraConfiguration.cpp  Main.cpp  Utility.cpp
StereoVision/Include/SV/: Application.hpp
StereoVision/Source/: Application.cpp  Main.cpp  Utility.cpp
